# metacontextify

./: .gitignore  LICENSE  README.md  pyproject.toml
metacontextify/: __init__.py  __main__.py  pipelines.py
metacontextify/data/: GLOBAL_REANALYSIS_BIO_001_029_mask.nc
metacontextify/data_retrievers/: __init__.py  cmems.py  ena.py  mgnify.py
metacontextify/utils/: __init__.py  http.py  logging.py  parsers.py
tests/: 10_proteins.csv  10_proteins.txt  10_samples.txt  10_samples_output.csv  PF00313_10_results.csv  __init__.py  input_broken_csv.csv  input_functional_csv.csv  output_functional_csv.csv  samples.txt  test_cmems.py  test_ena.py  test_main.py  test_mgnify.py  test_parsers.py  test_pipelines.py
